[package]
name = "whiskeyfyi"
version = "0.1.0"
edition = "2021"
authors = ["FYIPedia"]
description = "Whiskey encyclopedia with expressions, distilleries, and regions — async API client for whiskeyfyi.com."
license = "MIT"
repository = "https://github.com/fyipedia/whiskeyfyi-rs"
homepage = "https://whiskeyfyi.com"
documentation = "https://docs.rs/whiskeyfyi"
readme = "README.md"
keywords = ["whiskey", "bourbon", "scotch", "distillery", "tasting"]
categories = ["api-bindings", "data-structures"]

exclude = ["target/", "demo.gif", "demo.tape"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
